--- a/02_JUNIO/index.html
+++ b/02_JUNIO/index.html
@@ -38,7 +38,45 @@
         </div>
         <a href="#" class="btn">Descargar Curriculum</a>
       </div>
+      <div class="containerprofesion">
+        <div class="cajaprofesion">
+          <div class="profesion" style="--i: 0">
+            <i class="bx bx-code-alt">
+              <h3>Desarrollador Web</h3>
+            </i>
+          </div>
+          <div class="profesion" style="--i: 1">
+            <i class="bx bx-video-recording">
+              <h3>Multimedia</h3>
+            </i>
+          </div>
+          <div class="profesion" style="--i: 2">
+            <i class="bx bx-camera">
+              <h3>Camarografo</h3>
+            </i>
+          </div>
+          <div class="profesion" style="--i: 3">
+            <i class="bx bx-palette">
+              <h3>Diseñador Gráfico</h3>
+            </i>
+          </div>
+          <div class="circle"></div>
+        </div>
+        <div class="overlay"></div>
+      </div>
     </section>
+    <section class="acerca" id="#idacerca">
+      <div class="imagenacerca">
+        <img src="saludo.webp" alt="">
+      </div>
+      <div class="contentacerca">
+        <h2 class="cabecera">Acerca de <span>Mí</span></h2>
+        <h3>Hola !!!</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim praesentium molestiae expedita est soluta commodi possimus eos. Facere aspernatur architecto magnam distinctio ipsa nulla, ad blanditiis quasi. Magnam, amet fuga.</p>
+        <a href="#" class="btn">Leer mas</a>
+      </div>
+    </section>
+
     <script src="main.js"></script>
   </body>
 </html>
