--- a/02_JUNIO/index.html
+++ b/02_JUNIO/index.html
@@ -9,6 +9,10 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -67,16 +71,170 @@
     </section>
     <section class="acerca" id="#idacerca">
       <div class="imagenacerca">
-        <img src="saludo.webp" alt="">
+        <img src="saludo.webp" alt="" />
       </div>
       <div class="contentacerca">
         <h2 class="cabecera">Acerca de <span>Mí</span></h2>
         <h3>Hola !!!</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim praesentium molestiae expedita est soluta commodi possimus eos. Facere aspernatur architecto magnam distinctio ipsa nulla, ad blanditiis quasi. Magnam, amet fuga.</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+          praesentium molestiae expedita est soluta commodi possimus eos. Facere
+          aspernatur architecto magnam distinctio ipsa nulla, ad blanditiis
+          quasi. Magnam, amet fuga.
+        </p>
         <a href="#" class="btn">Leer mas</a>
       </div>
     </section>
 
+    <section class="servicios" id="#servicios">
+      <h2 class="cabecera">Mis <span> Servicios</span></h2>
+      <div class="container-servicios">
+        <div class="caja-servicios">
+          <i class="bx bx-link-external"></i>
+          <h3>Desarrollador Web</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit
+            impedit veniam, pariatur cum suscipit dolore, nisi architecto
+            possimus ipsam aut repellendus et quaerat recusandae nulla minus
+            explicabo adipisci at! Explicabo.
+          </p>
+          <a href="#" class="btn">Leer mas ...</a>
+        </div>
+        <div class="caja-servicios">
+          <i class="bx bxl-android"></i>
+          <h3>Desarrollador Movil</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit
+            impedit veniam, pariatur cum suscipit dolore, nisi architecto
+            possimus ipsam aut repellendus et quaerat recusandae nulla minus
+            explicabo adipisci at! Explicabo.
+          </p>
+          <a href="#" class="btn">Leer mas ...</a>
+        </div>
+        <div class="caja-servicios">
+          <i class="bx bxl-python"></i>
+          <h3>Desarrollador Python</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit
+            impedit veniam, pariatur cum suscipit dolore, nisi architecto
+            possimus ipsam aut repellendus et quaerat recusandae nulla minus
+            explicabo adipisci at! Explicabo.
+          </p>
+          <a href="#" class="btn">Leer mas ...</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="portafolio" id="#portafolio">
+      <h2 class="cabecera">Mis <span> Proyectos</span></h2>
+      <div class="container-portafolio">
+        <div class="caja-portafolio">
+          <img src="web1.jfif" alt="" />
+          <div class="layer-portafolio">
+            <h4>Desarrollador Web</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Recusandae odit amet nostrum.
+            </p>
+            <a href="#"><i class="bx bx-link-alt"></i></a>
+          </div>
+        </div>
+        <div class="caja-portafolio">
+          <img src="web2.png" alt="" />
+          <div class="layer-portafolio">
+            <h4>Desarrollador Web</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Recusandae odit amet nostrum.
+            </p>
+            <a href="#"><i class="bx bx-link-alt"></i></a>
+          </div>
+        </div>
+        <div class="caja-portafolio">
+          <img src="movil1.jfif" alt="" />
+          <div class="layer-portafolio">
+            <h4>Desarrollador Movil</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Recusandae odit amet nostrum.
+            </p>
+            <a href="#"><i class="bx bx-link-alt"></i></a>
+          </div>
+        </div>
+        <div class="caja-portafolio">
+          <img src="movil2.jfif" alt="" />
+          <div class="layer-portafolio">
+            <h4>Desarrollador Movil</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Recusandae odit amet nostrum.
+            </p>
+            <a href="#"><i class="bx bx-link-alt"></i></a>
+          </div>
+        </div>
+        <div class="caja-portafolio">
+          <img src="python1.jfif" alt="" />
+          <div class="layer-portafolio">
+            <h4>Desarrollador Python</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Recusandae odit amet nostrum.
+            </p>
+            <a href="#"><i class="bx bx-link-alt"></i></a>
+          </div>
+        </div>
+        <div class="caja-portafolio">
+          <img src="python2.png" alt="" />
+          <div class="layer-portafolio">
+            <h4>Desarrollador Python</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Recusandae odit amet nostrum.
+            </p>
+            <a href="#"><i class="bx bx-link-alt"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="container-referencia">
+      <h2 class="cabecera">Mis <span> Referencias</span></h2>
+      <div class="referencia-principal">
+        <div class="caja-referencia mySwiper">
+          <div class="content-referencia swiper-wrapper">
+            <div class="slider-referencia swiper-slide">
+              <img src="ref1.jfif" alt="" />
+              <h3>Mary</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Facilis, asperiores sint!
+              </p>
+            </div>
+            <div class="slider-referencia swiper-slide">
+              <img src="ref2.jfif" alt="" />
+              <h3>Jhon</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Facilis, asperiores sint!
+              </p>
+            </div>
+            <div class="slider-referencia swiper-slide">
+              <img src="ref3.jfif" alt="" />
+              <h3>Linda</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Facilis, asperiores sint!
+              </p>
+            </div>
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
